[tool.poetry]
name = "pymagento"
version = "1.3.0"
description = "Python client for the Magento 2 API"
authors = ["Bixoto <info@bixoto.com>"]
license = "MIT"
homepage = "https://github.com/Bixoto/PyMagento"
include = ["magento/py.typed"]
readme = "README.md"
packages = [
    {include = "magento"},
]

[tool.poetry.dependencies]
python = "^3.8"
api-session = "^1.2.0"
# https://github.com/readthedocs/readthedocs.org/issues/4912
# https://github.com/jacopok/mlgw_bns/commit/50e82ad2e218873d1b3a8732b6cbeb5f692dd14c
Sphinx = {version="^4.4.0", optional=true}
sphinx-rtd-theme = {version="^1.0.0", optional=true}

[tool.poetry.dev-dependencies]
mypy = "^0.920"
coverage = "^6.2"
types-requests = "^2.26.2"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
