[tool.poetry]
name = "pymagento"
version = "2.5.0"
description = "Python client for the Magento 2 API"
authors = ["Bixoto <tech@bixoto.com>"]
license = "MIT"
homepage = "https://github.com/Bixoto/PyMagento"
include = ["magento/py.typed"]
readme = "README.md"
packages = [
    { include = "magento" },
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    "Development Status :: 5 - Production/Stable",
    'Programming Language :: Python :: 3',
]
keywords = [
    "magento", "magento-api", "python-magento", "magento-python", "pymagento", "py-magento", "magento-rest-api",
    "magento2", "magento-2", "magento2-api", "magento2-rest-api",
]

[tool.poetry.dependencies]
python = "^3.8"
api-session = "^1.4.3"
# https://github.com/readthedocs/readthedocs.org/issues/4912
# https://github.com/jacopok/mlgw_bns/commit/50e82ad2e218873d1b3a8732b6cbeb5f692dd14c
Sphinx = { version = "^4.4.0", optional = true }
sphinx-rtd-theme = { version = "^1.0.0", optional = true }
typing-extensions = { version = "*", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
mypy = "^1"
coverage = "^7.6"
types-requests = "*"
pytest = "^8"
pytest-mock = "^3.11"
pytest-cov = "^5.0" # v6 requires Python 3.9
pytest-mypy-testing = "^0.1.1"
ruff = "^0.9"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[tool.coverage.report]
omit = ["tests/*"]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "except ImportError:",
]

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [
    "D", # docstrings
]
ignore = [
    "D100", # "Missing docstring in public module"
    "D105", # "Missing docstring in magic method"
    "D107", # "Missing docstring in `__init__`"
    "D204", # "1 blank line required after class docstring"
    "D205", # "1 blank line required between summary line and description",
    "D208", # "Docstring is over-indented" (examples)
    "D400", # "First line should end with a period" (false-positives)
    "D412", # "No blank lines allowed between a section header and its content"
    "D413", # "Missing blank line after last section"
    "D415", # "First line should end with a period, question mark, or exclamation point" (false-positives)

    "E402", # "Module level import not at top of file"
    "E501", # line too long
    "F401", # "unused" imports
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
