[project]
name = "pymagento"
version = "2.13.0"
description = "Python client for the Magento 2 API"
authors = [{ name = "Bixoto", email = "tech@bixoto.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "magento",
    "magento-api",
    "python-magento",
    "magento-python",
    "pymagento",
    "py-magento",
    "magento-rest-api",
    "magento2",
    "magento-2",
    "magento2-api",
    "magento2-rest-api",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "api-session>=1.5.2,<2",
    "typing-extensions ; python_full_version < '3.11'",
]

[project.optional-dependencies]
docs = [
    "Sphinx>=5.0,<6",
    "sphinx-rtd-theme>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/Bixoto/PyMagento"

[dependency-groups]
dev = [
    "mypy>=1,<2",
    "coverage>=7.6,<8",
    "types-requests",
    "pytest>=8,<9",
    "pytest-mock>=3.11,<4",
    "pytest-cov>=6.0,<7",
    "ruff>=0,<1",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["magento"]
module-root = ""
source-include = ["magento/py.typed"]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.coverage.report]
omit = ["tests/*"]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "except ImportError:",
]

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [
    "D", # docstrings
    "PERF", # Performance
    "W",
    "F",
    "UP", # deprecated Python
    # Flake8
    "A",
    "ASYNC",
    "B",
    "C4",
    "PIE800",
    "PT",
    "SIM",
    "SLOT",
    "YTT",

    "PLE",
    "FURB",
    "PLC0207",
]
ignore = [
    "D100", # "Missing docstring in public module"
    "D104", # "Missing docstring in public package"
    "D105", # "Missing docstring in magic method"
    "D107", # "Missing docstring in `__init__`"
    "D204", # "1 blank line required after class docstring"
    "D205", # "1 blank line required between summary line and description",
    "D208", # "Docstring is over-indented" (examples)
    "D400", # "First line should end with a period" (false-positives)
    "D401", # "First line of docstring should be in imperative mood"
    "D412", # "No blank lines allowed between a section header and its content"
    "D413", # "Missing blank line after last section"
    "D415", # "First line should end with a period, question mark, or exclamation point" (false-positives)

    "E402", # "Module level import not at top of file"
    "E501", # line too long
    "F401", # "unused" imports
]
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]
"conftest.py" = ["D"]
"docs/conf.py" = ["A001"]
